src/styles/blocks/features.scss
.feature {
  @include pageGrid;

  &__photos {
    grid-column: 1 / -1;
    @include pageGrid;
    margin-bottom: 16px;
  }

  &__link {
    position: relative;

    &--wide {
      @include onTablet {
        grid-column: span 4;
      }

      @include onDesktop {
        grid-column: span 8;
      }
    }

    &--square {
      height: 0;
      padding-bottom: 100%;

      @include onTablet {
        grid-column: span 2;
      }

      @include onDesktop {
        grid-column: span 4;
      }
    }
  }

  &__photo {
    position: absolute;
    width: 100%;
    height: 100%;
    object-fit: cover;

    transition: all $transition-time;

    &:hover {
      transform: scale(1.05);
    }
  }

  &__title {
    grid-column: 1 / -1;
    font-size: 24px;
    font-weight: 700;
    line-height: 140%; /* 33.6px */
    margin-bottom: 8px;
  }

  &__description {
    font-size: 16px;
    font-weight: 400;
    line-height: 140%; /* 22.4px */

    @include onDesktop {
      grid-column: span 8;
    }
  }
}

